--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1326</width>
+    <width>1323</width>
     <height>901</height>
    </rect>
   </property>
@@ -136,8 +136,12 @@ p, li { white-space: pre-wrap; }
        </layout>
       </widget>
       <widget class="QWidget" name="gammaGraphTab">
+       <attribute name="icon">
+        <iconset>
+         <normaloff>icon5.PNG</normaloff>icon5.PNG</iconset>
+       </attribute>
        <attribute name="title">
-        <string>Trans. vs. Gamma vs.. Energy</string>
+        <string>Trans. vs. Gamma vs. Energy</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_18">
         <item row="0" column="0">
@@ -734,6 +738,29 @@ p, li { white-space: pre-wrap; }
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_17">
+            <item row="6" column="1">
+             <spacer name="verticalSpacer_14">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeType">
+               <enum>QSizePolicy::Minimum</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>50</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="1" column="0" colspan="2">
+             <widget class="QLabel" name="label_6">
+              <property name="text">
+               <string>Select or enter path of .out file:</string>
+              </property>
+             </widget>
+            </item>
             <item row="7" column="0" colspan="3">
              <widget class="Line" name="line_7">
               <property name="frameShadow">
@@ -764,26 +791,16 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="6" column="1">
-             <spacer name="verticalSpacer_14">
+            <item row="13" column="0" colspan="3">
+             <widget class="Line" name="line_6">
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
+              </property>
+              <property name="lineWidth">
+               <number>5</number>
+              </property>
               <property name="orientation">
-               <enum>Qt::Vertical</enum>
-              </property>
-              <property name="sizeType">
-               <enum>QSizePolicy::Minimum</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>20</width>
-                <height>50</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item row="1" column="0" colspan="2">
-             <widget class="QLabel" name="label_6">
-              <property name="text">
-               <string>Select or enter path of .out file:</string>
+               <enum>Qt::Horizontal</enum>
               </property>
              </widget>
             </item>
@@ -817,19 +834,6 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="13" column="0" colspan="3">
-             <widget class="Line" name="line_6">
-              <property name="frameShadow">
-               <enum>QFrame::Raised</enum>
-              </property>
-              <property name="lineWidth">
-               <number>5</number>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-             </widget>
-            </item>
             <item row="11" column="0">
              <widget class="QPushButton" name="transExecuteLoadedButton">
               <property name="text">
@@ -844,24 +848,17 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="8" column="0" colspan="2">
-             <widget class="QLabel" name="label_42">
-              <property name="text">
-               <string>To view transmission graphs, load a Plato .csv file:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="9" column="0" colspan="2">
-             <widget class="QLabel" name="label_5">
-              <property name="text">
-               <string>Select or enter path of .csv file:</string>
-              </property>
-             </widget>
-            </item>
             <item row="10" column="1">
              <widget class="QPushButton" name="openCsvFileButton">
               <property name="text">
                <string>Open</string>
+              </property>
+             </widget>
+            </item>
+            <item row="8" column="0" colspan="2">
+             <widget class="QLabel" name="label_42">
+              <property name="text">
+               <string>To view transmission graphs, load a Plato .csv file:</string>
               </property>
              </widget>
             </item>
@@ -872,16 +869,10 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="15" column="0">
-             <widget class="QLineEdit" name="openDirLineEdit"/>
-            </item>
-            <item row="10" column="0">
-             <widget class="QLineEdit" name="openCsvFileLineEdit"/>
-            </item>
-            <item row="16" column="0">
-             <widget class="QPushButton" name="currExecuteLoadedButton">
+            <item row="9" column="0" colspan="2">
+             <widget class="QLabel" name="label_5">
               <property name="text">
-               <string>Execute</string>
+               <string>Select or enter path of .csv file:</string>
               </property>
              </widget>
             </item>
@@ -895,6 +886,9 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
+            <item row="10" column="0">
+             <widget class="QLineEdit" name="openCsvFileLineEdit"/>
+            </item>
             <item row="2" column="1">
              <widget class="QPushButton" name="openOutFileButton">
               <property name="text">
@@ -905,16 +899,13 @@ p, li { white-space: pre-wrap; }
             <item row="2" column="0">
              <widget class="QLineEdit" name="openOutFileLineEdit"/>
             </item>
-            <item row="18" column="0" colspan="3">
-             <widget class="Line" name="line_23">
-              <property name="frameShadow">
-               <enum>QFrame::Raised</enum>
-              </property>
-              <property name="lineWidth">
-               <number>5</number>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
+            <item row="15" column="0">
+             <widget class="QLineEdit" name="openDirLineEdit"/>
+            </item>
+            <item row="16" column="0">
+             <widget class="QPushButton" name="currExecuteLoadedButton">
+              <property name="text">
+               <string>Execute</string>
               </property>
              </widget>
             </item>
@@ -934,6 +925,13 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
+            <item row="21" column="1">
+             <widget class="QPushButton" name="openDirGammaButton">
+              <property name="text">
+               <string>Open</string>
+              </property>
+             </widget>
+            </item>
             <item row="23" column="0">
              <spacer name="verticalSpacer">
               <property name="orientation">
@@ -950,6 +948,19 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
+            <item row="18" column="0" colspan="3">
+             <widget class="Line" name="line_23">
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
+              </property>
+              <property name="lineWidth">
+               <number>5</number>
+              </property>
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+             </widget>
+            </item>
             <item row="19" column="0">
              <widget class="QLabel" name="label_49">
               <property name="text">
@@ -957,27 +968,20 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="21" column="1">
-             <widget class="QPushButton" name="openDirGammaButton">
-              <property name="text">
-               <string>Open</string>
-              </property>
-             </widget>
-            </item>
             <item row="21" column="0">
              <widget class="QLineEdit" name="gammaOpenDirLineEdit"/>
-            </item>
-            <item row="20" column="0">
-             <widget class="QLabel" name="label_50">
-              <property name="text">
-               <string>Load .csv directory</string>
-              </property>
-             </widget>
             </item>
             <item row="22" column="0">
              <widget class="QPushButton" name="gammaExecuteLoadedButton">
               <property name="text">
                <string>Execute</string>
+              </property>
+             </widget>
+            </item>
+            <item row="20" column="0">
+             <widget class="QLabel" name="label_50">
+              <property name="text">
+               <string>Load .csv directory</string>
               </property>
              </widget>
             </item>
