--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1323</width>
+    <width>1316</width>
     <height>901</height>
    </rect>
   </property>
@@ -733,12 +733,53 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>341</width>
-             <height>884</height>
+             <width>358</width>
+             <height>832</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_17">
-            <item row="6" column="1">
+            <item row="0" column="0" colspan="4">
+             <widget class="QLabel" name="label_41">
+              <property name="text">
+               <string>To view molecular orbitals, load a .out and .wf file.</string>
+              </property>
+              <property name="wordWrap">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="3">
+             <widget class="QPushButton" name="openOutFileButton">
+              <property name="text">
+               <string>Open</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="0" colspan="3">
+             <widget class="QLabel" name="label_43">
+              <property name="text">
+               <string>Select or enter path of .wf file:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="3">
+             <widget class="QPushButton" name="openWfFileButton">
+              <property name="enabled">
+               <bool>true</bool>
+              </property>
+              <property name="text">
+               <string>Open</string>
+              </property>
+             </widget>
+            </item>
+            <item row="5" column="0" colspan="2">
+             <widget class="QPushButton" name="executeLoadedButton">
+              <property name="text">
+               <string>Execute</string>
+              </property>
+             </widget>
+            </item>
+            <item row="6" column="2">
              <spacer name="verticalSpacer_14">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -754,14 +795,7 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="1" column="0" colspan="2">
-             <widget class="QLabel" name="label_6">
-              <property name="text">
-               <string>Select or enter path of .out file:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="7" column="0" colspan="3">
+            <item row="7" column="0" colspan="4">
              <widget class="Line" name="line_7">
               <property name="frameShadow">
                <enum>QFrame::Raised</enum>
@@ -774,24 +808,45 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="0" column="0" colspan="2">
-             <widget class="QLabel" name="label_41">
+            <item row="1" column="0" colspan="3">
+             <widget class="QLabel" name="label_6">
               <property name="text">
-               <string>To view molecular orbitals, load a .out and .wf file.</string>
-              </property>
-              <property name="wordWrap">
-               <bool>true</bool>
+               <string>Select or enter path of .out file:</string>
               </property>
              </widget>
             </item>
-            <item row="5" column="0">
-             <widget class="QPushButton" name="executeLoadedButton">
-              <property name="text">
-               <string>Execute</string>
+            <item row="4" column="0" colspan="3">
+             <widget class="QLineEdit" name="openWfFileLineEdit">
+              <property name="readOnly">
+               <bool>false</bool>
               </property>
              </widget>
             </item>
-            <item row="13" column="0" colspan="3">
+            <item row="2" column="0" colspan="3">
+             <widget class="QLineEdit" name="openOutFileLineEdit"/>
+            </item>
+            <item row="8" column="0" colspan="3">
+             <widget class="QLabel" name="label_42">
+              <property name="text">
+               <string>To view transmission graphs, load a Plato .csv file:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="19" column="0" colspan="3">
+             <widget class="QLabel" name="label_49">
+              <property name="text">
+               <string>To plot gamma vs. energy vs. transmission:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="20" column="0" colspan="2">
+             <widget class="QLabel" name="label_50">
+              <property name="text">
+               <string>Load .csv directory</string>
+              </property>
+             </widget>
+            </item>
+            <item row="13" column="0" colspan="4">
              <widget class="Line" name="line_6">
               <property name="frameShadow">
                <enum>QFrame::Raised</enum>
@@ -804,112 +859,48 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="4" column="0">
-             <widget class="QLineEdit" name="openWfFileLineEdit">
-              <property name="readOnly">
-               <bool>false</bool>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="0" colspan="2">
-             <widget class="QLabel" name="label_43">
-              <property name="text">
-               <string>Select or enter path of .wf file:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="12" column="1">
-             <spacer name="verticalSpacer_15">
-              <property name="orientation">
-               <enum>Qt::Vertical</enum>
-              </property>
-              <property name="sizeType">
-               <enum>QSizePolicy::Fixed</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>20</width>
-                <height>50</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item row="11" column="0">
-             <widget class="QPushButton" name="transExecuteLoadedButton">
-              <property name="text">
-               <string>Execute</string>
-              </property>
-             </widget>
-            </item>
-            <item row="14" column="0" colspan="2">
-             <widget class="QLabel" name="label_46">
-              <property name="text">
-               <string>To view current vs. bias, load a .out directory:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="10" column="1">
+            <item row="10" column="3">
              <widget class="QPushButton" name="openCsvFileButton">
               <property name="text">
                <string>Open</string>
               </property>
              </widget>
             </item>
-            <item row="8" column="0" colspan="2">
-             <widget class="QLabel" name="label_42">
+            <item row="21" column="0" colspan="3">
+             <widget class="QLineEdit" name="gammaOpenDirLineEdit"/>
+            </item>
+            <item row="15" column="0" colspan="3">
+             <widget class="QLineEdit" name="openDirLineEdit"/>
+            </item>
+            <item row="14" column="0" colspan="3">
+             <widget class="QLabel" name="label_46">
               <property name="text">
-               <string>To view transmission graphs, load a Plato .csv file:</string>
+               <string>To view current vs. bias, load a .out directory:</string>
               </property>
              </widget>
             </item>
-            <item row="15" column="1">
-             <widget class="QPushButton" name="openDirButton">
-              <property name="text">
-               <string>Open</string>
-              </property>
-             </widget>
-            </item>
-            <item row="9" column="0" colspan="2">
+            <item row="9" column="0" colspan="3">
              <widget class="QLabel" name="label_5">
               <property name="text">
                <string>Select or enter path of .csv file:</string>
               </property>
              </widget>
             </item>
-            <item row="4" column="1">
-             <widget class="QPushButton" name="openWfFileButton">
-              <property name="enabled">
-               <bool>true</bool>
-              </property>
+            <item row="15" column="3">
+             <widget class="QPushButton" name="openDirButton">
               <property name="text">
                <string>Open</string>
               </property>
              </widget>
             </item>
-            <item row="10" column="0">
-             <widget class="QLineEdit" name="openCsvFileLineEdit"/>
-            </item>
-            <item row="2" column="1">
-             <widget class="QPushButton" name="openOutFileButton">
-              <property name="text">
-               <string>Open</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="0">
-             <widget class="QLineEdit" name="openOutFileLineEdit"/>
-            </item>
-            <item row="15" column="0">
-             <widget class="QLineEdit" name="openDirLineEdit"/>
-            </item>
-            <item row="16" column="0">
+            <item row="16" column="0" colspan="2">
              <widget class="QPushButton" name="currExecuteLoadedButton">
               <property name="text">
                <string>Execute</string>
               </property>
              </widget>
             </item>
-            <item row="17" column="0">
+            <item row="17" column="2">
              <spacer name="verticalSpacer_30">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -925,30 +916,33 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="21" column="1">
-             <widget class="QPushButton" name="openDirGammaButton">
+            <item row="10" column="0" colspan="3">
+             <widget class="QLineEdit" name="openCsvFileLineEdit"/>
+            </item>
+            <item row="11" column="0" colspan="2">
+             <widget class="QPushButton" name="transExecuteLoadedButton">
               <property name="text">
-               <string>Open</string>
+               <string>Execute</string>
               </property>
              </widget>
             </item>
-            <item row="23" column="0">
-             <spacer name="verticalSpacer">
+            <item row="12" column="2">
+             <spacer name="verticalSpacer_15">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
               </property>
               <property name="sizeType">
-               <enum>QSizePolicy::Expanding</enum>
+               <enum>QSizePolicy::Fixed</enum>
               </property>
               <property name="sizeHint" stdset="0">
                <size>
                 <width>20</width>
-                <height>250</height>
+                <height>50</height>
                </size>
               </property>
              </spacer>
             </item>
-            <item row="18" column="0" colspan="3">
+            <item row="18" column="0" colspan="4">
              <widget class="Line" name="line_23">
               <property name="frameShadow">
                <enum>QFrame::Raised</enum>
@@ -961,29 +955,92 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="19" column="0">
-             <widget class="QLabel" name="label_49">
+            <item row="25" column="1">
+             <widget class="QLineEdit" name="lineEdit"/>
+            </item>
+            <item row="24" column="0" colspan="3">
+             <widget class="QLabel" name="label_51">
               <property name="text">
-               <string>To plot gamma vs. energy vs. transmission:</string>
+               <string>Alternatively generate from displayed molecule:</string>
               </property>
              </widget>
             </item>
-            <item row="21" column="0">
-             <widget class="QLineEdit" name="gammaOpenDirLineEdit"/>
-            </item>
-            <item row="22" column="0">
+            <item row="22" column="0" colspan="2">
              <widget class="QPushButton" name="gammaExecuteLoadedButton">
               <property name="text">
                <string>Execute</string>
               </property>
              </widget>
             </item>
-            <item row="20" column="0">
-             <widget class="QLabel" name="label_50">
+            <item row="25" column="0">
+             <widget class="QLabel" name="label_52">
               <property name="text">
-               <string>Load .csv directory</string>
+               <string>Gamma minimum:</string>
               </property>
              </widget>
+            </item>
+            <item row="21" column="3">
+             <widget class="QPushButton" name="openDirGammaButton">
+              <property name="text">
+               <string>Open</string>
+              </property>
+             </widget>
+            </item>
+            <item row="23" column="0">
+             <spacer name="verticalSpacer_31">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeType">
+               <enum>QSizePolicy::Fixed</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>0</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="27" column="0">
+             <widget class="QLabel" name="label_54">
+              <property name="text">
+               <string>Number of steps</string>
+              </property>
+             </widget>
+            </item>
+            <item row="27" column="1">
+             <widget class="QLineEdit" name="lineEdit_3"/>
+            </item>
+            <item row="26" column="1">
+             <widget class="QLineEdit" name="lineEdit_2"/>
+            </item>
+            <item row="26" column="0">
+             <widget class="QLabel" name="label_53">
+              <property name="text">
+               <string>Gamma maximum:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="28" column="0" colspan="2">
+             <widget class="QPushButton" name="pushButton">
+              <property name="text">
+               <string>Execute</string>
+              </property>
+             </widget>
+            </item>
+            <item row="29" column="0">
+             <spacer name="verticalSpacer">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
             </item>
            </layout>
           </widget>
