--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -956,7 +956,11 @@ p, li { white-space: pre-wrap; }
              </widget>
             </item>
             <item row="25" column="1">
-             <widget class="QLineEdit" name="lineEdit"/>
+             <widget class="QLineEdit" name="gammaStartLineEdit">
+              <property name="text">
+               <string>0</string>
+              </property>
+             </widget>
             </item>
             <item row="24" column="0" colspan="3">
              <widget class="QLabel" name="label_51">
@@ -1010,10 +1014,18 @@ p, li { white-space: pre-wrap; }
              </widget>
             </item>
             <item row="27" column="1">
-             <widget class="QLineEdit" name="lineEdit_3"/>
+             <widget class="QLineEdit" name="gammaStepsLineEdit">
+              <property name="text">
+               <string>10</string>
+              </property>
+             </widget>
             </item>
             <item row="26" column="1">
-             <widget class="QLineEdit" name="lineEdit_2"/>
+             <widget class="QLineEdit" name="gammaEndLineEdit">
+              <property name="text">
+               <string>2</string>
+              </property>
+             </widget>
             </item>
             <item row="26" column="0">
              <widget class="QLabel" name="label_53">
@@ -1023,7 +1035,7 @@ p, li { white-space: pre-wrap; }
              </widget>
             </item>
             <item row="28" column="0" colspan="2">
-             <widget class="QPushButton" name="pushButton">
+             <widget class="QPushButton" name="execute3DGraphButton">
               <property name="text">
                <string>Execute</string>
               </property>
