--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -308,7 +308,7 @@ p, li { white-space: pre-wrap; }
             <item row="32" column="0">
              <widget class="QLabel" name="label_61">
               <property name="text">
-               <string>Reference Potential (eV)</string>
+               <string>Reference Pot. (eV)</string>
               </property>
              </widget>
             </item>
