--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -308,7 +308,7 @@ p, li { white-space: pre-wrap; }
             <item row="32" column="0">
              <widget class="QLabel" name="label_61">
               <property name="text">
-               <string>Reference Pot. (eV)</string>
+               <string>Ref. Pot. (eV)</string>
               </property>
              </widget>
             </item>
@@ -741,13 +741,6 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="5" column="1">
-             <widget class="QLineEdit" name="excessLineEdit">
-              <property name="text">
-               <string>0</string>
-              </property>
-             </widget>
-            </item>
             <item row="6" column="0">
              <spacer name="verticalSpacer_32">
               <property name="orientation">
@@ -763,6 +756,13 @@ p, li { white-space: pre-wrap; }
                </size>
               </property>
              </spacer>
+            </item>
+            <item row="5" column="2">
+             <widget class="QLineEdit" name="excessLineEdit">
+              <property name="text">
+               <string>0</string>
+              </property>
+             </widget>
             </item>
            </layout>
           </widget>
@@ -815,7 +815,7 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>340</width>
+             <width>259</width>
              <height>833</height>
             </rect>
            </property>
@@ -1176,8 +1176,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>357</width>
-             <height>832</height>
+             <width>273</width>
+             <height>647</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_9">
@@ -1635,8 +1635,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>357</width>
-             <height>832</height>
+             <width>275</width>
+             <height>610</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_13">
@@ -2232,8 +2232,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>357</width>
-             <height>832</height>
+             <width>340</width>
+             <height>419</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_15">
@@ -2708,8 +2708,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>357</width>
-             <height>832</height>
+             <width>230</width>
+             <height>187</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_11">
